@@ -10,6 +10,9 @@
 	<li>Added two exceptions to the LGPL to support static
 	linking of applications against Mini-XML.</li>
 
+	<li>mxmlLoad*() did not detect missing close tags at the end
+	of an XML document.</li>
+
 	<li>Added user_data and ref_count members to mxml_node_t
 	structure.</li>
 
